@@ -1,5 +1,10 @@
 2009-06-08  Tomas Cerha  <cerha@brailcom.org>
 
+	* lib/pytis/extensions/cms/web.py:
+	Handle embedded CMS modules through bindings..
+
+2009-06-08  Tomas Cerha  <cerha@brailcom.org>
+
 	* lib/pytis/web/field.py:
 	Translate field value before parsing it as structured text in web forms..
 
